Add script to close inherited fds before lxc-start is called
lxc-start will abort if it inherits any file descriptors. We avoid
this by first closing fds and then exec'ing lxc-start.

Test plan:
- Container creation works

Change-Id: If436db238cfceb787c3167db8310df54f9d79bde

--- a/warden/root/lxc/.instance-skeleton/start.sh.erb
+++ b/warden/root/lxc/.instance-skeleton/start.sh.erb
@@ -10,7 +10,7 @@ fi
 
 <%= union_mount_command %>
 lxc-create -n instance-<%= config["id"] %> -f config
-lxc-start -n instance-<%= config["id"] %> -d -o lxc.log
+./close_fds lxc-start -n instance-<%= config["id"] %> -d -o lxc.log
 ifconfig veth-<%= config["id"] %> <%= config["network_gateway_ip"] %> netmask <%= config["network_netmask"] %>
 touch started
 
