--- a/warden/root/lxc/.instance-skeleton/config.erb
+++ b/warden/root/lxc/.instance-skeleton/config.erb
@@ -1,7 +1,7 @@
 lxc.utsname = <%= config["id"] %>
 lxc.rootfs = <%= File.join(PATH, "union") %>
 lxc.tty = 1
-lxc.pts = 1024
+lxc.pts = 0
 
 lxc.network.type = veth
 lxc.network.flags = up
@@ -11,21 +11,24 @@ lxc.network.veth.pair = veth-<%= config["id"] %>
 # control group
 lxc.cgroup.devices.deny = a
 
-# /dev/null and /dev/zero
+# /dev/null
 lxc.cgroup.devices.allow = c 1:3 rwm
+
+# /dev/zero
 lxc.cgroup.devices.allow = c 1:5 rwm
 
-# consoles
-lxc.cgroup.devices.allow = c 5:1 rwm
+# /dev/tty
 lxc.cgroup.devices.allow = c 5:0 rwm
-lxc.cgroup.devices.allow = c 4:0 rwm
-lxc.cgroup.devices.allow = c 4:1 rwm
+
+# /dev/console (redirected to a file by lxc)
+lxc.cgroup.devices.allow = c 5:1 rwm
 
 # /dev/{,u}random
-lxc.cgroup.devices.allow = c 1:9 rwm
 lxc.cgroup.devices.allow = c 1:8 rwm
-lxc.cgroup.devices.allow = c 136:* rwm
-lxc.cgroup.devices.allow = c 5:2 rwm
+lxc.cgroup.devices.allow = c 1:9 rwm
 
-# rtc
+# lxc uses pseudo-terminals for /dev/tty1 and /dev/console
+lxc.cgroup.devices.allow = c 136:* rwm
+
+# /dev/rtc
 lxc.cgroup.devices.allow = c 254:0 rwm
