warden: Rework bootstrap process for containers
Change-Id: Ied4afef02732d79931252ba72f1542d00d627afd

--- a/warden/root/lxc/.instance-skeleton/config.erb
+++ b/warden/root/lxc/.instance-skeleton/config.erb
@@ -1,5 +1,5 @@
 lxc.utsname = <%= config["id"] %>
-lxc.rootfs = <%= File.join(PATH, "union") %>
+lxc.rootfs = <%= File.join(Dir.pwd, "union") %>
 lxc.tty = 1
 lxc.pts = 0
 
