warden: Sanitize config to CREATE before using it
In addition, this patch makes the "bind_mounts" configuration option use
an Array to keep its mount specifications instead of a Hash. The order
in which mount specifications are passed may be important.

Change-Id: I6083dde1fbcbab61dc7a5d50f29a4e707eb270b0

--- a/warden/root/linux/setup-bind-mounts.erb
+++ b/warden/root/linux/setup-bind-mounts.erb
@@ -3,10 +3,10 @@
 set -o nounset
 set -o errexit
 
-<% for source_path, dest_info in params["bind_mounts"] %>
-mkdir -p <%= dest_info["path"] %>
-mount --bind <%= source_path %> <%= dest_info["path"] %>
-<% if dest_info["mode"] %>
-mount -o remount,<%= dest_info["mode"] %> <%= dest_info["path"] %>
+<% for src_path, dst_path, options in params["bind_mounts"] %>
+mkdir -p <%= dst_path %>
+mount --bind <%= src_path %> <%= dst_path %>
+<% if options["mode"] %>
+mount -o remount,<%= options["mode"] %> <%= dst_path %>
 <% end %>
 <% end %>
