--- a/warden/root/linux/setup-bind-mounts.erb
+++ b/warden/root/linux/setup-bind-mounts.erb
@@ -5,8 +5,8 @@ set -o errexit
 
 <% for src_path, dst_path, options in params["bind_mounts"] %>
 mkdir -p <%= dst_path %>
-mount --bind <%= src_path %> <%= dst_path %>
+mount -n --bind <%= src_path %> <%= dst_path %>
 <% if options["mode"] %>
-mount -o remount,<%= options["mode"] %> <%= dst_path %>
+mount -n --bind -o remount,<%= options["mode"] %> none <%= dst_path %>
 <% end %>
 <% end %>
