--- a/warden/root/linux/setup-bind-mounts.erb
+++ b/warden/root/linux/setup-bind-mounts.erb
@@ -3,10 +3,10 @@
 set -o nounset
 set -o errexit
 
-<% for src_path, dst_path, options in params["bind_mounts"] %>
+<% for src_path, dst_path, options in params[:bind_mounts] %>
 mkdir -p <%= dst_path %>
 mount -n --bind <%= src_path %> <%= dst_path %>
-<% if options["mode"] %>
-mount -n --bind -o remount,<%= options["mode"] %> none <%= dst_path %>
+<% if options[:mode] %>
+mount -n --bind -o remount,<%= options[:mode] %> none <%= dst_path %>
 <% end %>
 <% end %>
